syntax = "proto3";

option go_package = "/genproto";

package protos;

import "protos/common.proto";

service BookService {
    rpc CreateBook(BookCreate) returns (Book) {}
    rpc GetBook(ByTitle) returns (Book) {}
    rpc UpdateBook(BookCreate) returns (Void) {}
    rpc DeleteBook(ById) returns (Void) {}
    rpc GetAllBooks(TitleFilter) returns (Books) {}

    rpc SearchTitleAndAuthor(Search) returns (Books);

}


message Book {
    string id = 1;
    string title = 2;
    string author_id = 3;
    string genre_id = 4;
    string summary = 5;
}

message BookCreate {
    string Id = 1;
    string Title = 2;
    string AuthorID = 3;
    string GenreID = 4;
    string Summary = 5;
}

message ByTitle {
    string Title = 1;
}

message Books {
    repeated Book Books = 1;
}

message TitleFilter{
    string title = 1;
}

message Search {
    string title = 1;
    string author = 2;
}
